# gz-utils

./: .gitignore  BUILD.bazel  CMakeLists.txt  Changelog.md  LICENSE  MODULE.bazel  Migration.md  NEWS  README.md  api.md.in  bitbucket-pipelines.yml  configure.bat  coverage.ignore.in  extras.cmake.in  package.xml  tutorials.md.in
.bcr/: metadata.template.json
.github/: CODEOWNERS
.github/ci/: packages.apt
.github/workflows/: bazel.yml  ci.yml  pr-collection-labeler.yml
cli/: BUILD.bazel  README.md
cli/include/: CMakeLists.txt
cli/include/external-cli/gz/utils/: CMakeLists.txt
cli/include/external-cli/gz/utils/cli/: CLI.hpp  Config.hpp  Error.hpp  FormatterFwd.hpp  Macros.hpp  Split.hpp  StringTools.hpp  Timer.hpp  TypeTools.hpp
cli/include/external-cli/ignition/utils/cli/: App.hpp  CLI.hpp  Config.hpp  ConfigFwd.hpp  Error.hpp  Formatter.hpp  FormatterFwd.hpp  Macros.hpp  Option.hpp  Split.hpp  StringTools.hpp  Timer.hpp  TypeTools.hpp  Validators.hpp  Version.hpp
cli/include/gz/utils/cli/: GzFormatter.hpp
cli/include/ignition/utils/: cli.hh
cli/include/ignition/utils/cli/: IgnitionFormatter.hpp
cli/include/vendored-cli/: CMakeLists.txt
cli/include/vendored-cli/gz/utils/cli/: FormatterFwd.hpp
cli/include/vendored-cli/ignition/utils/cli/: App.hpp  CLI.hpp  Config.hpp  ConfigFwd.hpp  Error.hpp  Formatter.hpp  FormatterFwd.hpp  Macros.hpp  Option.hpp  Split.hpp  StringTools.hpp  Timer.hpp  TypeTools.hpp  Validators.hpp  Version.hpp
cli/src/: CMakeLists.txt  cli_TEST.cc
cmake/: foo.cmake
examples/: BUILD.bazel  CMakeLists.txt  README.md
examples/log/: CMakeLists.txt  main.cc
examples/logger/: CMakeLists.txt  main.cc
examples/using_cli/: CMakeLists.txt  main.cc
include/gz/utils/: Environment.hh  ExtraTestMacros.hh  ImplPtr.hh  NeverDestroyed.hh  Subprocess.hh  SuppressWarning.hh  config.hh  config.hh.in  utils.hh.in
include/gz/utils/detail/: DefaultOps.hh  ExtraTestMacros.hh  ImplPtr.hh  SuppressWarning.hh  subprocess.h
include/ignition/: utils.hh
include/ignition/utils/: Environment.hh  Export.hh  ExtraTestMacros.hh  Foo.hh  ImplPtr.hh  NeverDestroyed.hh  SuppressWarning.hh  config.hh  config.hh.in  utils.hh  utils.hh.in
include/ignition/utils/detail/: DefaultOps.hh  Export.hh  ExtraTestMacros.hh  ImplPtr.hh  SuppressWarning.hh
log/: BUILD.bazel
log/include/: CMakeLists.txt
log/include/gz/utils/log/: Logger.hh  SplitSink.hh
log/src/: CMakeLists.txt  Logger.cc  Logger_TEST.cc  SplitSink.cc  SplitSink_TEST.cc
logger/include/gz/utils/: CMakeLists.txt
logger/include/gz/utils/logger/: Console.hh  LogMessage.hh  SplitSink.hh
logger/src/: CMakeLists.txt  Console.cc  LogMessage.cc  SplitSink_TEST.cc
src/: CMakeLists.txt  Environment.cc  Environment_TEST.cc  ExtraTestMacros_TEST.cc  Foo.cc  Foo.hh  Foo_TEST.cc  NeverDestroyed_TEST.cc
test/: CMakeLists.txt  test_config.hh.in
test/gtest/: gtest-20180605-98a0d007d70.diff
test/gtest/include/gtest/: gtest-param-test.h  gtest-param-test.h.pump
test/integration/: CMakeLists.txt  actions_TEST.cc  deprecated_TEST.cc  subprocess_TEST.cc
test/integration/implptr/: CMakeLists.txt  ImplPtr_TEST.cc  TestClass.cc  TestClass.hh  classes.cc  classes.hh  implptr_test_classes.cc  implptr_test_classes.hh
test/integration/subprocess/: subprocess_main.cc
tools/: code_check.sh  cpplint.py
tutorials/: installation.md
