load("@buildifier_prebuilt//:rules.bzl", "buildifier", "buildifier_test")
load("@rules_gz//gz:headers.bzl", "gz_configure_header", "gz_export_header", "gz_include_header")
load("@rules_license//rules:license.bzl", "license")

package(
    default_applicable_licenses = [":license"],
)

license(
    name = "license",
    package_name = "gz-utils",
)

exports_files([
    "LICENSE",
    "MODULE.bazel",
])

gz_configure_header(
    name = "config",
    src = "include/gz/utils/config.hh.in",
    cmakelists = ["CMakeLists.txt"],
    package = "utils",
)

gz_export_header(
    name = "include/gz/utils/Export.hh",
    export_base = "GZ_UTILS",
    lib_name = "gz-utils",
    visibility = ["//visibility:private"],
)

public_headers_no_gen = glob([
    "include/gz/utils/*.hh",
    "include/gz/utils/detail/*.hh",
    "include/gz/utils/detail/*.h",
])

gz_include_header(
    name = "utilshh_genrule",
    out = "include/gz/utils.hh",
    hdrs = public_headers_no_gen + [
        "include/gz/utils/Export.hh",
        "include/gz/utils/config.hh",
    ],
)

public_headers = public_headers_no_gen + [
    "include/gz/utils/config.hh",
    "include/gz/utils/Export.hh",
    "include/gz/utils.hh",
]

cc_library(
    name = "gz-utils",
    srcs = ["src/Environment.cc"],
    hdrs = public_headers,
    copts = ["-fexceptions"],
    includes = ["include"],
    visibility = ["//visibility:public"],
)

# Tests
cc_library(
    name = "implptr_test_classes",
    srcs = [
        "test/integration/implptr/implptr_test_classes.cc",
    ],
    hdrs = [
        "test/integration/implptr/implptr_test_classes.hh",
    ],
    includes = ["test/integration/implptr"],
    deps = [":gz-utils"],
)

cc_test(
    name = "ImplPtr_TEST",
    size = "small",
    srcs = ["test/integration/implptr/ImplPtr_TEST.cc"],
    deps = [
        ":implptr_test_classes",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "Environment_TEST",
    srcs = ["src/Environment_TEST.cc"],
    deps = [
        ":gz-utils",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "NeverDestroyed_TEST",
    srcs = ["src/NeverDestroyed_TEST.cc"],
    copts = ["-fexceptions"],
    deps = [
        ":gz-utils",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "subprocess_main",
    srcs = ["test/integration/subprocess/subprocess_main.cc"],
    deps = [
        ":gz-utils",
        "//cli",
    ],
)

cc_test(
    name = "subprocess_TEST",
    srcs = ["test/integration/subprocess_TEST.cc"],
    local_defines = ['SUBPROCESS_EXECUTABLE_PATH=\\"subprocess_main\\"'],
    deps = [
        ":gz-utils",
        ":subprocess_main",
        "@googletest//:gtest_main",
    ],
)

buildifier(
    name = "buildifier.fix",
    exclude_patterns = ["./.git/*"],
    lint_mode = "fix",
    mode = "fix",
)

buildifier_test(
    name = "buildifier.test",
    exclude_patterns = ["./.git/*"],
    lint_mode = "warn",
    mode = "diff",
    no_sandbox = True,
    workspace = "//:MODULE.bazel",
)
