"gz-utils"

module(
    name = "gz-utils",
    repo_name = "org_gazebosim_gz-utils",
)

bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")
bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "rules_gazebo", version = "0.0.2")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "spdlog", version = "1.15.3")
