<?xml version="1.0"?>
<package format="2">
  <name>gz-utils2</name>
  <version>2.2.1</version>
  <description>Gazebo Utils : Classes and functions for robot applications</description>

  <maintainer email="addisu@openrobotics.org">Addizu Z. Taddese</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://github.com/gazebosim/gz-utils</url>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>gz-cmake3</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
