load("@rules_license//rules:license.bzl", "license")

package(
    default_applicable_licenses = ["//:license"],
)

license(
    name = "license",
    package_name = "gz-utils-cli",
)

cc_library(
    name = "cli11",
    hdrs = glob([
        "include/vendored-cli/gz/utils/cli/*.hpp",
    ]),
    includes = ["include/vendored-cli"],
)

cc_library(
    name = "GzFormatter",
    hdrs = [
        "include/gz/utils/cli/GzFormatter.hpp",
    ],
    includes = ["include"],
    deps = [
        "//:Export",
    ],
)

cc_library(
    name = "cli",
    visibility = ["//visibility:public"],
    deps = [
        ":GzFormatter",
        ":cli11",
    ],
)

cc_test(
    name = "cli_TEST",
    srcs = ["src/cli_TEST.cc"],
    deps = [
        ":cli",
        "@googletest//:gtest_main",
    ],
)
