load("@rules_license//rules:license.bzl", "license")

package(
    default_applicable_licenses = ["//cli:license"],
)

license(
    name = "license",
    package_name = "gz-utils-cli",
)

public_headers = [
    "include/gz/utils/cli/GzFormatter.hpp",
] + glob([
    "include/vendored-cli/gz/utils/cli/*.hpp",
])

cc_library(
    name = "cli",
    hdrs = public_headers,
    copts = ["-fexceptions"],
    includes = [
        "include",
        "include/vendored-cli",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:gz-utils",
    ],
)

cc_test(
    name = "cli_TEST",
    srcs = ["src/cli_TEST.cc"],
    deps = [
        ":cli",
        "@googletest//:gtest_main",
    ],
)
